Enabled preview features and forced compilation with Java 23 or newer